# stock-order-playground

./: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  compose.yml  requirements.txt
backend/: Cargo.toml  Dockerfile  run_bitcoin_node.sh
backend/src/: binance.rs  bitcoin.rs  coinbase.rs  db.rs  lib.rs  main.rs  ml.rs  mock.rs  models.rs
bc-ml-trading/: .gitignore  README.md  pyproject.toml
bc-ml-trading/bc-ml-trading/: Dockerfile  app.py  requirements.txt
bc-ml-trading/scripts/: finance1.ipynb  load_order.ipynb
frontend/: Dockerfile  client.py  mocked_response.json  requirements.txt  server.py
infra/: Pulumi.dev.yaml  README.md  __main__.py  requirements.txt
trader/: Cargo.toml  Dockerfile  system_config.json
trader/src/: db.rs  intrumentdata.rs  main.rs  models.rs  tools.rs  worker.rs
trader/src/strategies/: dummy_strategy.rs  mod.rs
trader/src/wal/: mod.rs  segment.rs  test_utils.rs  wal.rs
webapp/: Cargo.toml
webapp/assets/: main.css
webapp/src/: js.rs  main.rs  models.rs
