[package]
name = "ws-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tungstenite = "0.26.2"
url = "2.5.4"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26.2", features= ["native-tls"] }
anyhow = "1.0"
futures-util = "0.3"
bitcoincore-rpc-json = "0.19.0"
bitcoincore-rpc = "0.19.0"
dotenv = "0.15.0"
zeromq = { version = "*", default-features = false, features = ["async-std-runtime", "all-transport"] }
rand = "0.8.5"
async-trait = "0.1.88"
cbadv = { git = "https://github.com/ohkthx/cbadv-rs", branch = "main" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0.140"
lazy_static = "1.5.0"
