[project]
name = "bc-ml-trading"
version = "0.1.3"
description = "Machine Learning package"
authors = [
    { name = "carlosb" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests",  # example dependency
    "numpy",
    "pandas",
    "torch",
    "dotenv",
    "ta",
    "pyzmq"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
]
