[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "Window", "Document", "HtmlHeadElement", "HtmlElement",
    "Element", "Node", "MessageEvent", "WebSocket"] }
js-sys = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.143"
ordered-float = "5.0.0"



[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
